<resources>
    <string name="app_name">Tagmarshal</string>
    <string name="tagmarshal">TagMarshal</string>
    <string name="current_location">Refresh\nlocation</string>
    <string name="group">Group</string>
    <string name="help">Help</string>
    <string name="hole">Hole</string>
    <string name="hole_number">Hole %1$s</string>
    <string name="holes_number">%1$s Holes</string>
    <string name="back">Back</string>
    <string name="center">Center</string>
    <string name="pin">Pin</string>
    <string name="front">Front</string>
    <string name="warning_lightning">Lightning\nWarning!</string>
    <string name="map">Map</string>
    <string name="emergency">Emergency</string>
    <string name="refreshments">Refreshments</string>
    <string name="report_issue">Report Issue</string>
    <string name="contact_us">Contact Us</string>
    <string name="group_info">Group Info</string>
    <string name="admin">Admin</string>
    <string name="ok_on_our_way">Okay, on our way</string>
    <string name="where_is_the_clubhouse">Where is the clubhouse?</string>
    <string name="reminder">Reminder</string>
    <string name="ok_we_will_catch_up">Okay we\'ll catch up</string>
    <string name="pls_assist_us">Please assist us</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="medical_assistance">Medical Assistance</string>
    <string name="group_safety">Group Safety</string>
    <string name="other">Other</string>
    <string name="message_medical_assistance">Emergency request for Medical Assistance</string>
    <string name="message_group_safety">Emergency request for Group Safety</string>
    <string name="message_other">Emergency request for Other</string>
    <string name="place_food_order">Place Food Order</string>
    <string name="order_food">Place Order</string>
    <string name="call_beverage_cart">Call Beverage Cart</string>
    <string name="cart_related_issue">Cart Related Issue</string>
    <string name="course_damaged">Course Damaged</string>
    <string name="lost_item">Lost Item</string>
    <string name="send_message">Send Message</string>
    <string name="type_short_message">Type short message</string>
    <string name="okay">Okay</string>
    <string name="round_info">Round Info</string>
    <string name="pace_info">Pace info:</string>
    <string name="current_round_time">Current round time:</string>
    <string name="target_round_time">Target round time:</string>
    <string name="select_course">Select Course</string>
    <string name="permanently_assign">Permanently  Assign</string>
    <string name="assign_device">Assign Device</string>
    <string name="change_course">Change Course</string>
    <string name="change_device_number">Change Device Number</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="round_time">Round time:</string>
    <string name="view_course_map">View Course Map</string>
    <string name="device">Device</string>
    <string name="new_device_number">New device number:</string>
    <string name="assign_number">Assign Number</string>
    <string name="end_round">End round</string>
    <string name="pls_select_the_course">Select the course please</string>
    <string name="select_group">Select Group</string>
    <string name="confirm">Confirm</string>
    <string name="enter_scores">Enter Scores</string>
    <string name="group_names">Group Names</string>
    <string name="left_time_pace">%1$d min</string>
    <string name="played">Played</string>
    <string name="app_requires_permissions">The app requires permissions</string>
    <string name="par_number">Par %1s</string>
    <string name="device_setup">Device Setup</string>
    <string name="mobile">Mobile</string>
    <string name="cart">Cart</string>
    <string name="device_type">Device Type:</string>
    <string name="unit_for_measuring_distance">Unit for measuring distance:</string>
    <string name="yards">Yards</string>
    <string name="meters">Meters</string>
    <string name="please_wait">Please wait…</string>
    <string name="starting_in">Starting in:</string>
    <string name="starting_in_var">Starting in: %1$d mins</string>
    <string name="left_time">%1$d mins</string>
    <string name="on_pace">On Pace</string>
    <string name="message_sent">Message sent</string>
    <string name="message_sending_fail">Message sending fail</string>
    <string name="battery_level">Screen Battery:</string>
    <string name="charging">Charging:</string>
    <string name="your_round_starts_in">Your round starts in %1$d mins from hole %2$d</string>
    <string name="ok_we_will_be_there">Okay, we\'ll be there</string>
    <string name="delayed">Delayed</string>
    <string name="delayer">Delayer</string>
    <string name="slow">Slow</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="change_group">Change Group</string>
    <string name="screen_round_info_pace_info">%1$s mins : %2$s</string>
    <string name="ok_no_problem">OK</string>
    <string name="request_assistance">Request assistance</string>
    <string name="please_remember_to_return_device">Please remember to return device</string>
    <string name="return_device">Return device</string>
    <string name="server_error">Server error</string>
    <string name="choose_at_least_one_of_the_types">Please choose at least one of the types</string>
    <string name="please_enter_text">Please enter the text</string>
    <string name="could_not_get_the_groups">Couldn\'t get the groups</string>
    <string name="back_to_round">Back to round</string>
    <string name="clear_data">Clear Data</string>
    <string name="try_again">Try again</string>
    <string name="refresh">Refresh</string>
    <string name="measuring_units">Measuring Units</string>
    <string name="variable">Variable</string>
    <string name="rate_your_round">Rate Your Experience</string>
    <string name="rate_your_round_so_far">Rate Your Experience So Far</string>
    <string name="awesome_what_do_you_love_the_best">Awesome, what do you love the best?</string>
    <string name="please_tell_us_how_we_can_do_better">Please tell us how we can do better:</string>
    <string name="looks_like_there_are_some_issues_pls_restart_app">Looks like there are some issues. Please, restart the app</string>
    <string name="pls_assist_me">Please assist me</string>
    <string name="some_point_of_hole_is_null">Failure. Some point of the hole is null</string>
    <string name="cannot_get_device_location">Can\'t get device location</string>
    <string name="looks_like_there_are_problems_with_retreiving_of_hole_data">Looks like there are some problems with retrieving of hole data</string>
    <string name="club_house">Club house</string>
    <string name="rate_round_failure">Rate the round failure</string>
    <string name="you_have_entered_restricted_zone">You are approaching a geofenced location, please remain in the authorized area</string>
    <string name="you_are_entering_a_restricted_area">You are entering a restricted area, please exit now</string>
    <string name="geo_fence_alert">Geofence Alert</string>
    <string name="call_drinks_cart">Call Drinks Cart</string>
    <string name="not_saved_scores">Scores not saved</string>
    <string name="complete_scores">Complete scores</string>
    <string name="signal_loss">Signal loss</string>
    <string name="complete_and_end">Are you sure you are finished?</string>
    <string name="request_sent">Your request has been sent</string>
    <string name="score">Live Score</string>
    <string name="leaderboard">Live Leaderboard</string>
    <string name="late">Late</string>
    <string name="food_placeholder">Food</string>
    <string name="beverage_placeholder">Beverage</string>
    <string name="order_placeholder">Order</string>
    <string name="food_and_bevs"><![CDATA[Food & Bevs]]></string>
    <string name="do_you_want_to_call_cart">You are about to call a drinks cart</string>
    <string name="send_logs_to_support">Send Logs To Support</string>
    <string name="skip">Skip</string>
    <string name="about_to_skip_message">You are about to skip your group selection</string>
    <string name="about_to_skip">About To Skip</string>
    <string name="about_to_change_message">You are about to change your group selection</string>
    <string name="confirm_order_place">You are about to place an order</string>
    <string name="order_is_placed">Order is placed</string>
    <string name="info_popup">Info</string>
    <string name="no">No</string>
    <string name="hole_change">Change hole</string>
    <string name="yes">Yes</string>
    <string name="confirm_tee_time">Confirm Tee Time</string>
    <string name="tee_confirm_message">Do you confirm your choice?</string>
    <string name="tag">Tag</string>
    <string name="please_refresh_course">Please refresh course for correct operation of the app</string>
    <string name="don_t_show_this_again">Don\'t show this again</string>
    <string name="rotate_screen">Rotate screen</string>
    <string name="assist_me">Assist me</string>
    <string name="set_maintenance">Set maintenance</string>
    <string name="clear_maintenance">Stop maintenance</string>
    <string name="pair_snaptoplay">Pair Speakers</string>
    <string name="unpair_snaptoplay">Unpair Speakers</string>
    <string name="enable_speakers">Enable Speakers</string>
    <string name="disable_speakers">Disable Speakers</string>
    <string name="title_activity_scoring">ScoringActivity</string>
    <string name="all_scores_saved">All scores saved</string>
    <string name="signal_lost">Signal lost, scores will be saved later</string>
    <string name="signal_restored">Signal restored, all scores saved</string>
    <string name="back_to_map">BACK TO MAP</string>
    <string name="complete_score">COMPLETE SCORE</string>
    <string name="player_name">Name</string>
    <string name="strokes">Strokes</string>
    <string name="kitchen_closed_message">Our kitchen is currently closed. \n\n Kitchen hours for today are \n %s%</string>
    <string name="kitchen_closed_title">KITCHEN CLOSED</string>
    <string name="order_placed_title">ORDER PLACED</string>
    <string name="order_placed_message">Your order will be available at the clubhouse.\n\n Total: %s</string>
    <string name="empty_cart_text">YOUR CART IS EMPTY</string>
    <string name="return_to_menu">RETURN TO MENU</string>
    <string name="add_a_note">Add A Note</string>
    <string name="empty_cart_subtext">Please add items in order to proceed.</string>
    <string name="product_options">PRODUCT OPTIONS</string>
    <string name="special_instructions">Special Instructions</string>
    <string name="view_order">View Order</string>
    <string name="waiver_form">WAIVER FORM</string>
    <string name="i_agree">I Agree</string>
    <string name="continue_text">Continue</string>
    <string name="player_details">PLAYER DETAILS</string>
    <string name="player_detail_subtext">Please provide us with the below information</string>
    <string name="range_finding">RANGE FINDING</string>
    <string name="activate">Activate</string>
    <string name="data_capture_failed">Something went wrong. Could not save player details</string>
    <string name="data_capture_successful">Data Accepted, Range finding Unlocked!</string>
    <string name="required_field_missing">This field is required</string>

</resources>
