<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <View
        android:id="@+id/top_margin"
        android:layout_width="0dp"
        android:layout_height="@dimen/padding_side_menu"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/emergency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_margin"
        app:sideMenuIcon="@drawable/ic_emergency"
        app:sideMenuText="@string/emergency"
        app:sideMenuTopDivider="false" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/refreshments"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emergency"
        app:sideMenuIcon="@drawable/ic_bottle"
        app:sideMenuText="@string/refreshments" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refreshments"
        app:sideMenuIcon="@drawable/ic_issue"
        app:sideMenuText="@string/report_issue" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/report"
        app:sideMenuIcon="@drawable/ic_contact_us"
        app:sideMenuText="@string/contact_us" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact"
        app:sideMenuIcon="@drawable/ic_person"
        app:sideMenuText="@string/group_info" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/measure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group"
        app:sideMenuIcon="@drawable/ic_ruler"
        app:sideMenuText="@string/measuring_units" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/map_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measure"
        app:sideMenuIcon="@drawable/ic_golf_hole"
        app:sideMenuText="@string/map" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/call_drinks_cart_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/map_item"
        app:sideMenuIcon="@drawable/ic_golf_cart"
        app:sideMenuText="@string/call_drinks_cart" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/score_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_drinks_cart_item"
        app:sideMenuIcon="@drawable/ic_menu_score"
        app:sideMenuText="@string/score" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/leaderboard_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score_item"
        app:sideMenuIcon="@drawable/ic_leaderboard"
        app:sideMenuText="@string/leaderboard" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/food_and_bevs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/leaderboard_item"
        app:sideMenuIcon="@drawable/ic_food_and_bevs"
        app:sideMenuText="@string/food_and_bevs" />

    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/enable_speakers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_and_bevs"
        app:sideMenuIcon="@drawable/ic_connectspeakers"
        app:sideMenuText="@string/enable_speakers" />
    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/change_course"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food_and_bevs"
        app:sideMenuIcon="@drawable/change_course"
        app:sideMenuText="@string/change_course" />


    <com.tagmarshal.golf.view.SideMenuItem
        android:id="@+id/disable_speakers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enable_speakers"
        app:sideMenuIcon="@drawable/ic_disconnectspeakers"
        app:sideMenuText="@string/disable_speakers" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/help_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/admin_item"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/help_icon"
            android:layout_width="@dimen/image_size_3"
            android:layout_height="@dimen/image_size_3"
            android:layout_margin="@dimen/margin_5"
            android:src="@drawable/ic_help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/gray" />

        <com.tagmarshal.golf.view.TMTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingLeft="@dimen/margin_5"
            android:paddingRight="@dimen/margin_5"
            android:text="@string/help"
            android:textColor="@color/gray"
            android:textSize="@dimen/text_size_4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/help_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/admin_icon"
            android:layout_width="@dimen/image_size_3"
            android:layout_height="@dimen/image_size_3"
            android:layout_margin="@dimen/margin_4"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toTopOf="@+id/tv_app_version"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

       

        <com.tagmarshal.golf.view.TMTextView
            android:id="@+id/TMTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:paddingLeft="@dimen/margin_4"
            android:text="@string/admin"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_3"
            app:layout_constraintBottom_toTopOf="@+id/tv_app_version"
            app:layout_constraintLeft_toRightOf="@id/admin_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/switch_gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/debug_console_trigger"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:id="@+id/tv_course_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@color/switch_gray"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>