<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_dialog_background">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        android:background="@color/white"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/margin_6"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray_divider"
        android:textCursorDrawable="@drawable/drawable_edit_text_cursor"
        android:textSize="@dimen/text_size_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="@dimen/margin_6"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray_divider"
        android:textCursorDrawable="@drawable/drawable_edit_text_cursor"
        android:textSize="@dimen/text_size_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <com.tagmarshal.golf.view.TMButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_4"
        app:buttonText="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>